<resources>
    <string name="app_name">Movie Database</string>
    <string name="result_error">Извините, список результатов пуст. Проверьте корректность введённых данных.</string>
    <string name="server_error">Что-то пошло не так. Попробуйте ещё раз.</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="i_already_have_an_account">У меня уже есть аккаунт</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="password_title">Пароль</string>
    <string name="email_title">E-mail</string>
    <string name="second_name_title">Фамилия</string>
    <string name="name_title">Имя</string>
    <string name="in_trend_title">В тренде</string>
    <string name="now_watching_title">Сейчас в кино</string>
    <string name="soon_title">Скоро</string>
    <string name="movies_subtitle">фильмы</string>
    <string name="tvs_subtitle">сериалы</string>
    <string name="popular_actors_title">Популярные актёры</string>
    <string name="the_best_title">Лучшее</string>
    <string name="today_on_air">Сегодня в эфире</string>
    <string name="now_on_air_title">Сейчас в эфире</string>
    <string name="top_list_toolbar_title">Список</string>
    <string name="search_title">Поиск</string>
    <string name="movies_rated_by_user">Фильмы, которые вы оценили</string>
    <string name="tvs_rated_by_user">Сериалы, которые вы оценили</string>
    <string name="episodes_rated_by_user">Серии, которые вы оценили</string>
    <string name="exit_button_title">Выйти</string>
    <string name="there_are_no_items">В этом списке ничего нет</string>
    <string name="information_title">Информация</string>
    <string name="annotation_title">Описание</string>
    <string name="biography_title">Описание</string>
    <string name="in_main_roles_title">В главных ролях</string>
    <string name="repeat_button_title">Повторить</string>
    <string name="something_went_wrong">Что-то пошло не так.</string>
    <string name="collection_comosition">Состав коллекции</string>
    <string name="episodes_title">Серии</string>
    <string name="photos_title">Фото</string>
</resources>