<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/movie_list"
        />

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/warning"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/there_are_no_items"
        android:gravity="center"
        android:textSize="30sp"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/error_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/server_error"
        android:textSize="24sp"
        android:paddingHorizontal="36dp"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:visibility="gone"/>

    <Button
        android:id="@+id/error_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/repeat_button_title"
        style="@style/NonBackgroundRoundedButton"
        android:layout_gravity="center"
        android:layout_marginTop="56dp"
        android:visibility="gone"/>


</FrameLayout>

