<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.SingUpActivity"
    android:background="@color/dark_blue">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/top_line"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintGuide_begin="48dp"
            android:orientation="horizontal"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/start_line"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintGuide_begin="32dp"
            android:orientation="vertical"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/end_line"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintGuide_end="32dp"
            android:orientation="vertical"/>

        <ImageView
            android:id="@+id/imageLogo"
            android:layout_width="186dp"
            android:layout_height="134dp"
            android:src="@drawable/ic_squered_logo"
            app:layout_constraintEnd_toEndOf="@id/end_line"
            app:layout_constraintStart_toStartOf="@id/start_line"
            app:layout_constraintTop_toTopOf="@id/top_line"
            app:layout_constrainedWidth="true"
            app:layout_constrainedHeight="true"/>

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            app:layout_constraintTop_toBottomOf="@id/imageLogo"
            app:layout_constraintEnd_toEndOf="@id/end_line"
            app:layout_constraintStart_toStartOf="@id/start_line"
            android:layout_marginTop="44dp"
            app:layout_constrainedWidth="true"
            android:hint="@string/name_title"
            style="@style/WhiteBorderRoundedEditText"/>

        <EditText
            android:id="@+id/surname"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            app:layout_constraintTop_toBottomOf="@id/name"
            app:layout_constraintEnd_toEndOf="@id/end_line"
            app:layout_constraintStart_toStartOf="@id/start_line"
            android:layout_marginTop="16dp"
            app:layout_constrainedWidth="true"
            android:hint="@string/second_name_title"
            style="@style/WhiteBorderRoundedEditText"/>

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            app:layout_constraintTop_toBottomOf="@id/surname"
            app:layout_constraintEnd_toEndOf="@id/end_line"
            app:layout_constraintStart_toStartOf="@id/start_line"
            android:layout_marginTop="16dp"
            app:layout_constrainedWidth="true"
            android:hint="@string/email_title"
            style="@style/WhiteBorderRoundedEditText"/>

        <EditText
            android:id="@+id/pass"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            app:layout_constraintTop_toBottomOf="@id/email"
            app:layout_constraintEnd_toEndOf="@id/end_line"
            app:layout_constraintStart_toStartOf="@id/start_line"
            android:layout_marginTop="16dp"
            app:layout_constrainedWidth="true"
            android:hint="@string/password_title"
            style="@style/WhiteBorderRoundedEditText"/>

        <EditText
            android:id="@+id/repass"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            app:layout_constraintTop_toBottomOf="@id/pass"
            app:layout_constraintEnd_toEndOf="@id/end_line"
            app:layout_constraintStart_toStartOf="@id/start_line"
            android:layout_marginTop="16dp"
            app:layout_constrainedWidth="true"
            android:hint="@string/repeat_password"
            style="@style/WhiteBorderRoundedEditText"
            android:inputType="textPassword"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/proof"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/sign_up"
            android:layout_marginTop="64dp"
            app:layout_constraintTop_toBottomOf="@id/repass"
            app:layout_constraintEnd_toEndOf="@id/end_line"
            app:layout_constraintStart_toStartOf="@id/start_line"
            app:layout_constrainedWidth="true"
            style="@style/BlueRoundedCornerButton"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/sign_up"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/sign_up"
            android:layout_marginTop="64dp"
            app:layout_constraintTop_toBottomOf="@id/repass"
            app:layout_constraintEnd_toEndOf="@id/end_line"
            app:layout_constraintStart_toStartOf="@id/start_line"
            app:layout_constrainedWidth="true"
            style="@style/BlueRoundedCornerButton"
            android:visibility="invisible"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/i_alredy_have_an_account"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/i_already_have_an_account"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/sign_up"
            app:layout_constraintEnd_toEndOf="@id/end_line"
            app:layout_constraintStart_toStartOf="@id/start_line"
            app:layout_constrainedWidth="true"
            android:layout_marginBottom="16dp"
            style="@style/WhiteBorderRoundedButton"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>