<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.SearchResultFragment"
    android:background="@color/very_dark_blue"
    android:orientation="vertical"
    android:id="@+id/main_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        app:navigationIcon="?attr/homeAsUpIndicator"
        android:background="@color/very_dark_blue"
        app:title="@string/search_title"/>

    <FrameLayout
        android:id="@+id/content_parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center" />

        <FrameLayout
            android:id="@+id/error"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/error_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/server_error"
                android:textSize="24sp"
                android:paddingHorizontal="36dp"
                android:layout_gravity="center"
                android:textAlignment="center"/>

            <Button
                android:id="@+id/error_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/repeat_button_title"
                style="@style/NonBackgroundRoundedButton"
                android:layout_gravity="center"
                android:layout_marginTop="56dp"/>
        </FrameLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:listitem="@layout/item_movie"
            android:id="@+id/search_list"/>

    </FrameLayout>

</LinearLayout>