<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_parent">

    <LinearLayout
        android:id="@+id/loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/loading_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="?attr/homeAsUpIndicator"
            android:background="@color/very_dark_blue"/>

        <ProgressBar
            android:id="@+id/loading_progressbar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"/>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/error"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/error_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="?attr/homeAsUpIndicator"
            android:background="@color/very_dark_blue"/>

        <TextView
            android:id="@+id/error_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/server_error"
            android:textSize="24sp"
            android:paddingHorizontal="36dp"
            android:layout_gravity="center"
            android:textAlignment="center"/>

        <Button
            android:id="@+id/error_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/repeat_button_title"
            style="@style/NonBackgroundRoundedButton"
            android:layout_gravity="center"
            android:layout_marginTop="56dp"/>
    </FrameLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/loaded"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:contentScrim="@color/very_dark_blue"
                app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
                app:titleEnabled="false">

                <ImageView
                    android:id="@+id/main_image"
                    android:layout_width="match_parent"
                    android:layout_height="260dp"
                    android:scaleType="centerCrop"
                    app:layout_collapseMode="parallax"
                    android:background="@color/light_gray"/>

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin"
                    app:navigationIcon="?attr/homeAsUpIndicator"
                    android:background="@color/black_80"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Dark" />

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/parent_for_scroll"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/top_line"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_begin="16dp" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/left_line"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="16dp" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/right_line"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:orientation="vertical"
                    app:layout_constraintGuide_end="16dp" />

                <TextView
                    android:id="@+id/collection_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constrainedWidth="true"
                    app:layout_constraintEnd_toStartOf="@+id/right_line"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/top_line"
                    tools:text="Name"
                    android:textColor="@color/light_gray"/>

                <TextView
                    android:id="@+id/annotation_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/annotation_title"
                    style="@style/ItemInfoTitle"
                    app:layout_constraintEnd_toStartOf="@+id/right_line"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/left_line"
                    app:layout_constraintTop_toBottomOf="@+id/collection_title"
                    android:layout_marginTop="20dp"/>

                <TextView
                    android:id="@+id/collection_annotation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constrainedWidth="true"
                    android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toStartOf="@+id/right_line"
                    app:layout_constraintStart_toStartOf="@+id/left_line"
                    app:layout_constraintTop_toBottomOf="@+id/annotation_title"
                    android:textSize="16sp"
                    android:textColor="@color/light_gray"
                    tools:text="Movie annotation Movie annotation Movie annotation Movie annotation Movie annotation Movie annotation Movie annotation Movie annotation Movie annotation" />

                <TextView
                    android:id="@+id/collection_composition_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/ItemInfoTitle"
                    app:layout_constraintEnd_toStartOf="@+id/right_line"
                    app:layout_constraintStart_toStartOf="@+id/left_line"
                    app:layout_constraintTop_toBottomOf="@+id/collection_annotation"
                    app:layout_constrainedWidth="true"
                    app:layout_constraintHorizontal_bias="0.0"
                    android:text="@string/collection_comosition"
                    android:layout_marginTop="20dp"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/collection_composition"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="@+id/right_line"
                    app:layout_constraintStart_toStartOf="@id/left_line"
                    app:layout_constraintTop_toBottomOf="@+id/collection_composition_title"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constrainedWidth="true"
                    android:layout_marginTop="8dp"
                    tools:listitem="@layout/item_backdrop_title"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</FrameLayout>