<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.itemsinfos.FilmInfoFragment"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:navigationIcon="?attr/homeAsUpIndicator"
        android:background="@color/very_dark_blue"/>

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginTop="38dp"/>

    <FrameLayout
        android:id="@+id/error"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="56dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/error_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/server_error"
            android:textSize="24sp"
            android:paddingHorizontal="36dp"
            android:layout_gravity="center"
            android:textAlignment="center"/>

        <Button
            android:id="@+id/error_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/repeat_button_title"
            style="@style/NonBackgroundRoundedButton"
            android:layout_gravity="center"
            android:layout_marginTop="56dp"/>

    </FrameLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/loaded"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="56dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/top_line"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="16dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/left_line"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="16dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/right_line"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:orientation="vertical"
                app:layout_constraintGuide_end="16dp" />

            <ImageView
                android:id="@+id/main_image"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/episode_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constrainedWidth="true"
                app:layout_constraintEnd_toStartOf="@+id/right_line"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/main_image"
                tools:text="Name"
                android:textColor="@color/light_gray"/>

            <TextView
                android:id="@+id/episode_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constrainedWidth="true"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@+id/right_line"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/episode_title"
                app:layout_constraintTop_toBottomOf="@+id/episode_title"
                tools:text="Name"
                android:textColor="@color/light_gray"/>

            <TextView
                android:id="@+id/episode_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:maxWidth="238dp"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/episode_number"
                app:layout_constraintTop_toBottomOf="@+id/episode_number"
                tools:text="2000"
                android:textColor="@color/light_gray"/>

            <TextView
                android:id="@+id/rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/episode_date"
                app:layout_constraintTop_toBottomOf="@+id/episode_date"
                android:layout_marginTop="16dp"
                tools:text="10.0"
                android:textColor="@color/light_gray"/>

            <TextView
                android:id="@+id/annotation_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/ItemInfoTitle"
                app:layout_constraintEnd_toStartOf="@+id/right_line"
                app:layout_constraintStart_toStartOf="@+id/left_line"
                app:layout_constraintTop_toBottomOf="@+id/rating"
                app:layout_constrainedWidth="true"
                app:layout_constraintHorizontal_bias="0.0"
                android:text="@string/annotation_title"
                android:layout_marginTop="20dp"/>

            <TextView
                android:id="@+id/annotation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constrainedWidth="true"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toStartOf="@+id/right_line"
                app:layout_constraintStart_toStartOf="@+id/left_line"
                app:layout_constraintTop_toBottomOf="@+id/annotation_title"
                android:textSize="16sp"
                android:textColor="@color/light_gray"
                tools:text="Movie annotation Movie annotation Movie annotation Movie annotation Movie annotation Movie annotation Movie annotation Movie annotation Movie annotation" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</FrameLayout>